wir benötigen Datenschutzerklärung

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
     }
   }
   function eventAccountholder() {
-    if (document.mitgliedsantrag.accountholder.value=="" && 
+    if (document.mitgliedsantrag.accountholder.value=="" &&
       document.mitgliedsantrag.firstname.value!="" &&
       document.mitgliedsantrag.lastname.value!="") {
       document.mitgliedsantrag.accountholder.value=
@@ -41,7 +41,7 @@
   }
   </script>
   <head>
-    <title>Opennet Mitgliedsantrag - Opennet Initiative e.V.</title> 
+    <title>Opennet Mitgliedsantrag - Opennet Initiative e.V.</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   </head>
   <body onload="eventInit()">
@@ -54,7 +54,7 @@
     <h4>Mitgliedsantrag / Membership Application</h4>
     <div style="background-color:#eeeeee;padding:5px">
     <small>
-    Hiermit beantrage ich die Aufnahme in den Verein. / Hereby I apply for 
+    Hiermit beantrage ich die Aufnahme in den Verein. / Hereby I apply for
     admission into the organization.
     <form name="mitgliedsantrag" action="mitgliedsantrag_upload.php" method="post" enctype="multipart/form-data">
     <table>
@@ -122,11 +122,11 @@
     <div style="background-color:#eeeeee;padding:5px">
     <small>
     Hiermit erm&auml;chtige ich Opennet Initiative e.V. widerruflich,
-    die von mir zu entrichtenden Zahlungen f&uuml;r Mitgliedsbeitr&auml;ge und den einmaligen 
-    Zuschuss F&auml;lligkeit zu Lasten meines u.a. Kontos durch Lastschrift einzuziehen. 
-    Wenn mein Konto die erforderliche Deckung nicht aufweist, besteht seitens des 
-    kontof&uuml;hrenden Kreditinstitutes keine Verpflichtung zur Einl&ouml;sung. 
-    Eine &Auml;nderung der Bankverbindung muss 5 Bankarbeitstage vor Ausf&uuml;hrung 
+    die von mir zu entrichtenden Zahlungen f&uuml;r Mitgliedsbeitr&auml;ge und den einmaligen
+    Zuschuss F&auml;lligkeit zu Lasten meines u.a. Kontos durch Lastschrift einzuziehen.
+    Wenn mein Konto die erforderliche Deckung nicht aufweist, besteht seitens des
+    kontof&uuml;hrenden Kreditinstitutes keine Verpflichtung zur Einl&ouml;sung.
+    Eine &Auml;nderung der Bankverbindung muss 5 Bankarbeitstage vor Ausf&uuml;hrung
     vorliegen. Eventuell entstandene Kosten durch R&uuml;cklastschriften sind zu ersetzen.
     <table>
     <tr>
@@ -145,7 +145,9 @@
     <h4>Hinweise / References</h4>
     <div style="background-color:#eeeeee;padding:5px">
     <small>
-    Diesem Antrag liegen die <a href="https://www.opennet-initiative.de/download/satzung.pdf">Satzung</a> in Verbindung mit der <a href="https://www.opennet-initiative.de/download/beitragsordnung.pdf">Beitragsordnung</a> und <a href="https://www.opennet-initiative.de/download/leistungsordnung.pdf">Leistungsordnung</a> des Vereins zugrunde.
+    Diesem Antrag liegen die <a href="https://www.opennet-initiative.de/download/satzung.pdf">Satzung</a> in Verbindung mit der <a href="https://www.opennet-initiative.de/download/beitragsordnung.pdf">Beitragsordnung</a>,
+    <a href="https://www.opennet-initiative.de/download/datenschutzerklärung2018.pdf">Datenschutzerklärung</a>
+    und <a href="https://www.opennet-initiative.de/download/leistungsordnung.pdf">Leistungsordnung</a> des Vereins zugrunde.
     Informationen an alle Mitglieder werden stets offiziell per E-Mail kommuniziert.
     Anregungen, Fragen und W&uuml;nsche k&ouml;nnen &uuml;ber das <a href="https://opennet-initiative.de/wiki/Spezial:Kontakt">Kontaktformular</a> auf der Webseite
 <a href="https://www.opennet-initiative.de">www.opennet-initiative.de</a> gesendet oder bei den <a href="https://opennet-initiative.de/wiki/Aktuelle_Ereignisse">regelm&auml;&szlig;igen Treffen</a> besprochen werden.
