Mitgliedsantrag Web: use new download links

--- a/www/index.html
+++ b/www/index.html
@@ -145,9 +145,9 @@
     <h4>Hinweise / References</h4>
     <div style="background-color:#eeeeee;padding:5px">
     <small>
-    Diesem Antrag liegen die <a href="https://www.opennet-initiative.de/download/satzung.pdf">Satzung</a> in Verbindung mit der <a href="https://www.opennet-initiative.de/download/beitragsordnung.pdf">Beitragsordnung</a>,
-    <a href="https://www.opennet-initiative.de/download/datenschutzerklärung2018.pdf">Datenschutzerklärung</a>
-    und <a href="https://www.opennet-initiative.de/download/leistungsordnung.pdf">Leistungsordnung</a> des Vereins zugrunde.
+    Diesem Antrag liegen die <a href="https://downloads.opennet-initiative.de/verein/dokumente/satzung.pdf">Satzung</a> in Verbindung mit der <a href="https://downloads.opennet-initiative.de/verein/dokumente/beitragsordnung.pdf">Beitragsordnung</a>,
+    <a href="https://downloads.opennet-initiative.de/verein/dokumente/datenschutzerklärung2018.pdf">Datenschutzerklärung</a>
+    und <a href="https://downloads.opennet-initiative.de/verein/dokumente/leistungsordnung.pdf">Leistungsordnung</a> des Vereins zugrunde.
     Informationen an alle Mitglieder werden stets offiziell per E-Mail kommuniziert.
     Anregungen, Fragen und W&uuml;nsche k&ouml;nnen &uuml;ber das <a href="https://opennet-initiative.de/wiki/Spezial:Kontakt">Kontaktformular</a> auf der Webseite
 <a href="https://www.opennet-initiative.de">www.opennet-initiative.de</a> gesendet oder bei den <a href="https://opennet-initiative.de/wiki/Aktuelle_Ereignisse">regelm&auml;&szlig;igen Treffen</a> besprochen werden.
